--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -12,16 +12,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: ⬇️ Checkout repository
+      - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: ☕ Set up Java 17
+      - name: Set up Java 17
         uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'temurin'
 
-      - name: 📦 Set up Maven cache
+      - name: Set up Maven cache
         uses: actions/cache@v3
         with:
           path: ~/.m2
@@ -29,13 +29,13 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-maven
 
-      - name: 📥 Install dependencies
+      - name: Install dependencies
         run: mvn clean install -DskipTests
 
-      - name: 🧪 Run API Tests
+      - name: Run API Tests
         run: mvn test
 
-      - name: 📤 Upload TestNG Reports
+      - name: Upload TestNG Reports
         if: always()
         uses: actions/upload-artifact@v3
         with:
